---
source: src/tests/mod.rs
expression: ast
input_file: src/tests/source_files/scoping.lv
---
Program(
    [
        Expression {
            span: Span {
                start: 0,
                end: 59,
            },
            kind: VariableDecl {
                name: "y",
                value: Expression {
                    span: Span {
                        start: 5,
                        end: 59,
                    },
                    kind: Block(
                        [
                            Expression {
                                span: Span {
                                    start: 10,
                                    end: 47,
                                },
                                kind: VariableDecl {
                                    name: "x",
                                    value: Expression {
                                        span: Span {
                                            start: 15,
                                            end: 47,
                                        },
                                        kind: Block(
                                            [
                                                Expression {
                                                    span: Span {
                                                        start: 23,
                                                        end: 29,
                                                    },
                                                    kind: VariableDecl {
                                                        name: "x",
                                                        value: Expression {
                                                            span: Span {
                                                                start: 28,
                                                                end: 29,
                                                            },
                                                            kind: IntLiteral(
                                                                7,
                                                            ),
                                                        },
                                                        mutable: false,
                                                        ty: None,
                                                    },
                                                },
                                                Expression {
                                                    span: Span {
                                                        start: 36,
                                                        end: 42,
                                                    },
                                                    kind: Infix {
                                                        left: Expression {
                                                            span: Span {
                                                                start: 36,
                                                                end: 37,
                                                            },
                                                            kind: Ident(
                                                                "x",
                                                            ),
                                                        },
                                                        operator: Minus,
                                                        right: Expression {
                                                            span: Span {
                                                                start: 40,
                                                                end: 42,
                                                            },
                                                            kind: IntLiteral(
                                                                23,
                                                            ),
                                                        },
                                                    },
                                                },
                                            ],
                                        ),
                                    },
                                    mutable: false,
                                    ty: None,
                                },
                            },
                            Expression {
                                span: Span {
                                    start: 51,
                                    end: 57,
                                },
                                kind: Infix {
                                    left: Expression {
                                        span: Span {
                                            start: 51,
                                            end: 52,
                                        },
                                        kind: Ident(
                                            "x",
                                        ),
                                    },
                                    operator: Plus,
                                    right: Expression {
                                        span: Span {
                                            start: 55,
                                            end: 57,
                                        },
                                        kind: IntLiteral(
                                            50,
                                        ),
                                    },
                                },
                            },
                        ],
                    ),
                },
                mutable: false,
                ty: None,
            },
        },
        Expression {
            span: Span {
                start: 61,
                end: 66,
            },
            kind: Infix {
                left: Expression {
                    span: Span {
                        start: 61,
                        end: 62,
                    },
                    kind: Ident(
                        "y",
                    ),
                },
                operator: Minus,
                right: Expression {
                    span: Span {
                        start: 65,
                        end: 66,
                    },
                    kind: IntLiteral(
                        2,
                    ),
                },
            },
        },
    ],
)
